# IFNITY-ENGINE

./: .gitignore  .gitmodules  License.md  README.md  precommit_log.txt  run_download_assets.py
Ifnity/: CMakeLists.txt  CMakeSettings.json  cpp.hint  sceneconverter.json
Ifnity/EmptyProject/: CMakeLists.txt
Ifnity/GPU_MONITOR/: CMakeLists.txt
Ifnity/GPU_MONITOR/src/: Source.cpp
Ifnity/Ifnity/: CMakeLists.txt  FindGraphicsAPIs.cmake  LICENSE.txt  addheader.py  precommit_log.txt  shader_vs.glsl  shaders_main_ps.spv  shaders_main_vs.spv
Ifnity/Ifnity/cmake/: CoreEngine.cmake  D3D12.cmake  OpenGL.cmake  Vulkan.cmake
Ifnity/Ifnity/src/: Ifnity.h  ImGuiContexManager.cpp  ImGuiContextManager.h  Imgui_Helper.cpp  Imgui_Helper.h  pch.h
Ifnity/Ifnity/src/BenchMark/: FpsCounter.cpp  FpsCounter.hpp  ITask.hpp  NvmlMonitor.cpp  NvmlMonitor.hpp  Scheduler.cpp
Ifnity/Ifnity/src/Ifnity/: App.cpp  App.cxx  App.h  Core.h  EntryPoint.h  GraphicsDeviceManager.cpp  GraphicsDeviceManager.h  GraphicsDeviceManager.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.h  Window.cpp  Window.h
Ifnity/Ifnity/src/Ifnity/Camera/: Camera.hpp  CameraEvent.h  CameraLayer.cpp  CameraLayer.h
Ifnity/Ifnity/src/Ifnity/Event/: Event.h  EventBus.h  EventMacro.h  EventSystem.h  WindowEvent.h
Ifnity/Ifnity/src/Ifnity/Graphics/: Bitmap.hpp  IShader.cpp  IShader.hpp  Utils.cpp  Utils.hpp  VtxData.cpp  VtxData.hpp  ifrhi.h  stb_image_write_impl.cpp
Ifnity/Ifnity/src/Ifnity/Layers/: ExampleLayer.h  ImguiLayer.cpp  ImguiLayer.h  NVML_Layer.hpp
Ifnity/Ifnity/src/Ifnity/Maths/: basics.h  math.h  matrix.cpp  matrix.hpp  vector.cpp  vector.h
Ifnity/Ifnity/src/Ifnity/Models/: GeometicModels.cpp  GeometicModels.hpp
Ifnity/Ifnity/src/Ifnity/Scene/: Material.cpp  Material.h  Scene.cpp  Scene.h  VtxData.cpp  VtxData.hpp
Ifnity/Ifnity/src/Ifnity/Utils/: HolderUtils.hpp  ScopeExit.h  SlotMap.cpp  SlotMap.hpp  Utils.hpp  VFS.cpp  VFS.hpp  deferredTask.hpp  vec4.hpp
Ifnity/Ifnity/src/Platform/D3D12/: d3d12_Buffer.cpp  d3d12_Buffer.hpp  d3d12_CommandBuffer.cpp  d3d12_CommandBuffer.hpp  d3d12_Image.cpp  d3d12_Image.hpp  d3d12_ImmediateCommands.cpp  d3d12_ImmediateCommands.hpp  d3d12_PipelineBuilder.cpp  d3d12_PipelineBuilder.hpp  d3d12_StaginDevice.cpp  d3d12_StaginDevice.hpp  d3d12_SwapChain.cpp  d3d12_SwapChain.hpp  d3d12_classes.cpp  d3d12_classes.hpp  d3d12_constants.hpp
Ifnity/Ifnity/src/Platform/ImguiRender/: ImguiD3D11Render.cpp  ImguiD3D12Render.cpp  ImguiD3D12Render.h  ImguiOpenglRender.cpp  ImguiOpenglRender.h  ImguiVulkanRender.cpp
Ifnity/Ifnity/src/Platform/OpenGL/: DeviceOpengl.cpp  (+5 more)
Ifnity/Ifnity/src/ShaderBuilding/: ShaderBuilder.cpp  ShaderBuilder.hpp
Ifnity/LargeScene/: CMakeLists.txt
Ifnity/LargeScene/src/: Source.cpp
Ifnity/MeshGeometrical_Draw/: CMakeLists.txt
Ifnity/MeshGeometrical_Draw/src/: Source.cpp
Ifnity/Sandbox/: CMakeLists.txt
Ifnity/Sandbox/src/: NVML_Layer.hpp  Source.cpp
Ifnity/ShadersPipeLine/: CMakeLists.txt
Ifnity/ShadersPipeLine/src/: Source.cpp
Ifnity/Simple_Texture/: CMakeLists.txt
Ifnity/Simple_Texture/src/: Source.cpp
Ifnity/SkyBox_Camera/: CMakeLists.txt
Ifnity/SkyBox_Camera/src/: Source.cpp
Ifnity/Tetahedre/: CMakeLists.txt
Ifnity/Tetahedre/src/: Source.cpp
Ifnity/Texture_Sample/: CMakeLists.txt
Ifnity/Texture_Sample/src/: Source.cpp
Ifnity/bufferVulkan/src/: Source.cpp
Ifnity/camera_mesh_vk/: CMakeLists.txt
Ifnity/camera_mesh_vk/src/: Source.cpp  common.sp  mesh_camera.frag
Ifnity/examples/: CreateIfnityProject.py
Ifnity/examples/D3D12_Assimp/: CMakeLists.txt
Ifnity/examples/D3D12_Assimp/src/: D3D12Assimp.cpp  assimp.hlsl
Ifnity/examples/D3D12_Cube_MVP/: CMakeLists.txt
Ifnity/examples/D3D12_Cube_MVP/src/: Source.cpp  aux_code.hlsl  cube_color.hlsl
Ifnity/examples/D3D12_Scene/: CMakeLists.txt
Ifnity/examples/D3D12_Scene/src/: D3D12Scene.cpp  Scene.hlsl
Ifnity/examples/D3D12_SimpleTriangle/: CMakeLists.txt
Ifnity/examples/D3D12_SimpleTriangle/src/: Source.cpp  common.hlsl  triangle.hlsl
Ifnity/examples/D3Texture/: CMakeLists.txt
Ifnity/examples/D3Texture/src/: Source.cpp  texture.hlsl
Ifnity/examples/EmptyProject/: CMakeLists.txt
Ifnity/examples/Geometry_Mesh/: CMakeLists.txt
Ifnity/examples/Geometry_Mesh/src/: Source.cpp
Ifnity/examples/MeshGeometrical_Draw/: CMakeLists (2).txt  CMakeLists.txt
Ifnity/examples/MeshGeometrical_Draw/src/: Source.cpp
Ifnity/examples/Nueva carpeta/infinite_plane/: CMakeLists.txt
Ifnity/examples/Sandbox/: CMakeLists.txt
Ifnity/examples/Sandbox/src/: Source.cpp
Ifnity/examples/SceneVk/: CMakeLists.txt
Ifnity/examples/SceneVk/src/: AlphaTest.sp  MaterialData.h  Source.cpp  UtilsNormal.sp  common.sp  scene_vk.frag  scene_vk.vert
Ifnity/examples/ShadersPipeLine/: CMakeLists.txt
Ifnity/examples/ShadersPipeLine/src/: Source.cpp
Ifnity/examples/Simple_GL_RenderPass/: CMakeLists.txt
Ifnity/examples/Simple_GL_RenderPass/src/: Source.cpp  quadfrag.glsl  quadvert.glsl
Ifnity/examples/Simple_Texture/: CMakeLists.txt
Ifnity/examples/Texture_Sample/: CMakeLists.txt
Ifnity/examples/Texture_Sample/src/: Source.cpp
Ifnity/examples/Triangle/: CMakeLists.txt
Ifnity/examples/Triangle/src/: Source.cpp
Ifnity/examples/bufferVulkan/: CMakeLists.txt
Ifnity/examples/bufferVulkan/src/: Source.cpp
Ifnity/examples/camera_mesh_vk/: CMakeLists.txt
Ifnity/examples/camera_mesh_vk/src/: Source.cpp  mesh_camera.frag  mesh_camera.vert
Ifnity/examples/d3d12_SceneDebug/: CMakeLists.txt
Ifnity/examples/d3d12_SceneDebug/src/: SceneDebug.cpp  Scene_test_DEBUG.hlsl
Ifnity/examples/d3d12_test_scene/: CMakeLists.txt
Ifnity/examples/d3d12_test_scene/src/: Scene_test.hlsl  TestScene.cpp
Ifnity/examples/glslang_vk_test/src/: Source.cpp
Ifnity/examples/scene_materials/: CMakeLists.txt
Ifnity/examples/scene_materials/src/: Source.cpp
Ifnity/glslang_vk_test/: CMakeLists.txt
Ifnity/glslang_vk_test/src/: Source.cpp
Ifnity/infinite_plane/src/: Source.cpp
Ifnity/scene_materials/: CMakeLists.txt
Ifnity/scene_materials/src/: Source.cpp
(+102 files in other folders)
